# final-project-level3-recsys-12

./: .gitignore  Dockerfile  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue_template.md
EDA/: EDA_KJH_ver1.ipynb  EDA_KJH_ver1.py  EDA_KJH_ver2.ipynb  EDA_KJH_ver3.ipynb  EDA_KJH_ver3.py  EDA_KJH_ver4.ipynb  EDA_KJH_ver4.py  category_preprocess.py  cluster_evaluate.ipynb  cluster_evaluate.py  get_cluster.py  get_similarity.py  merge_cluster_train.py  popularity_based_rec.ipynb  popularity_check.ipynb  popularity_check.py  title_preprocess.py  utils_category.py  utils_cluster.py  utils_title.py
backend/: README.md  __main__.py  main.py  pyproject.toml  requirements.txt  settings.sh
backend/data/: preprocess.ipynb
backend/db/: db_connect.py  models.py
backend/inference/: model.yaml  predict.py  predict_signup.py
backend/service/: item.py  user.py
crawling/: README.md  args.py  config.py  crawling_modules.py  error_find.ipynb  main.py  preprocess.py  requirements.txt  utils.py
crawling/preprocess_utils/: args.py  card.py  cluster_item.py  house.py  item.py  utils_category.py  utils_cluster.py  utils_similarity.py
database/: README.md  db_manager.py  requirements.txt
database/sql/: create_table.sql  delete_table.sql
frontend/: .env.production  README.md  env.production  index.html  package-lock.json  package.json
frontend/public/: global.css  index.html
frontend/src/: App.svelte  Detail.svelte  Footer.svelte  GoTop.svelte  Home.svelte  (+8 more)
gcp/: README.md  create_bucket.py  gcp_args.py  main.py  utils.py
model/: README.md
(+23 files in other folders)
