[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend-FastAPI"
authors = ["JisooRyu99 <cussion09@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
